added splice to html renderer

--- a/TODO.org
+++ b/TODO.org
@@ -4,12 +4,6 @@
   - fix all bugs caused by not calling free for 5,000 lines of code :'-)
 - write the compiler in bug
 - implement TCO
-- allow normal types to be put into structs like:
-  - (struct test ((a uint8) (b any) c)) 
-     - both "(b any)" and "c" mean the same thing
-- allow for nested structs
-  - (struct a (my-field))
-  - (struct b ((nested a)))
 - write function for getting primative struct field without creating a new object each time
   - e.g.:
        (set 'buffer (make-buffer))
@@ -22,3 +16,4 @@
 
 - implement closures to support higher order functions
   - right now functions are higher order, but it contains horrible bugs anytime you attempt to reference a free variable (both downward and upward funargs)
+- implement dynamic scoped variables
